--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -2,7 +2,9 @@ name: Plan Terraform
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
   pull_request:
-    types: [opened, synchronize]
+    types:
+      - opened
+      - synchronize
     branches:
       - 'feature/**'
 
